--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "webpack-stream": "^5.2.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "jquery": "^3.5.1",
     "slick-carousel": "^1.8.1"
   }
